<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.apollocurrency</groupId>
  <artifactId>apollo-blockchain</artifactId>
  <version>1.48.5</version>
  <packaging>pom</packaging>
  <name>apollo-blockchain</name>

  <organization>
    <name>Apollo Foundation</name>
    <url>https://www.apollocurrency.com/</url>
  </organization>
  <repositories>
    <!-- arti.firstbridge.work does not chache in apl repo so we have to add Maven Central here -->
    <repository>
      <id>central</id>
      <name>Maven Repository Switchboard</name>
      <layout>default</layout>
      <url>https://repo1.maven.org/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <!--   arti.firstbridge.work for follwing artifacts: web-wallet, fbcrypto -->
    <repository>
      <id>apl</id>
      <name>arti.firstbridge.work</name>
      <url>https://arti.firstbridge.work/artifactory/apl</url>
    </repository>
  </repositories>

  <modules>
    <module>apl-api</module>
    <module>apl-api2</module>
    <module>apl-crypto</module>
    <module>apl-utils</module>
    <module>apl-core</module>
    <module>apl-updater</module>
    <module>apl-bom</module>
    <module>apl-conf</module>
    <module>apl-exec</module>
    <module>apl-db-updater</module>
    <module>apl-dex</module>
    <module>apl-vault-wallet</module>
  </modules>

  <properties>
    <artifact.basedir>${project.basedir}</artifact.basedir>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
    <java.version>11</java.version>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <surefire-plugin.version>2.22.2</surefire-plugin.version>
    <compile-plugin.version>3.8.1</compile-plugin.version>
    <!-- cross-platform zip distribution -->
    <zip-file-name>apollo-blockchain</zip-file-name>
    <zip-format>zip</zip-format>
    <!--Dependency Versions-->

    <antifraud.version>1.1.3</antifraud.version>

    <!-- We have to define this property and change it accordingly for correct version of packages -->
    <apl-bom-ext.version>1.0.6</apl-bom-ext.version>
    <base-dist-dir>ApolloWallet/apollo-blockchain</base-dist-dir>

    <build-helper-maven-plugin.version>1.9.1</build-helper-maven-plugin.version>
    <jsonpath-maven-plugin.version>1.2.0</jsonpath-maven-plugin.version>
    <maven-shade-plugin.version>3.2.3</maven-shade-plugin.version>
  </properties>
  <!-- We have following profiles: prod, dev, debug
       1. prod: profile for release with build of all zips and sha-256 sums
       2. dev:  profile for development, no extra build artefacts, faster builds for developers
  -->

  <profiles>
    <!-- The Configuration of the development profile -->
    <profile>
      <id>dev</id>
      <properties>
        <zipExecutionPhase>none</zipExecutionPhase>
        <excludeTestTags>slow</excludeTestTags>
      </properties>
    </profile>
    <!-- The Configuration of the production profile -->
    <profile>
      <id>prod</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <zipExecutionPhase>package</zipExecutionPhase>
        <excludeTestTags>slow</excludeTestTags>
      </properties>
    </profile>
  </profiles>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.apollocurrency</groupId>
        <artifactId>apl-bom-ext</artifactId>
        <version>${apl-bom-ext.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>com.apollocurrency.antifraud</groupId>
        <artifactId>antifraud</artifactId>
        <version>${antifraud.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${surefire-plugin.version}</version>
          <configuration>
            <useSystemClassLoader>false</useSystemClassLoader>
            <excludedGroups>${excludeTestTags}</excludedGroups>
            <!--
                        <properties>
                          <includeTags>${includeTestTags}</includeTags>
                        </properties>
            -->
          </configuration>
          <dependencies>
            <dependency>
              <groupId>org.apache.maven.wagon</groupId>
              <artifactId>wagon-webdav-jackrabbit</artifactId>
              <version>1.0-beta-6</version>
              <exclusions>
                <exclusion>
                  <groupId>org.slf4j</groupId>
                  <artifactId>slf4j-nop</artifactId>
                </exclusion>
              </exclusions>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>${build-helper-maven-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${compile-plugin.version}</version>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
            <forceJavacCompilerUse>true</forceJavacCompilerUse>
          </configuration>
        </plugin>
        <!-- Maven Assembly Plugin -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <plugin>
          <groupId>net.nicoulaj.maven.plugins</groupId>
          <artifactId>checksum-maven-plugin</artifactId>
          <version>1.8</version>
        </plugin>
        <plugin>
          <groupId>ca.szc.maven</groupId>
          <artifactId>jsonpath-maven-plugin</artifactId>
          <version>1.2.0</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <showDeprecation>false</showDeprecation>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
